Wikify/WikiParser.java
// Generated from Wiki.g4 by ANTLR 4.5


import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class WikiParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, MUL=15, ADD=16, DIV=17, 
		SUB=18, MOD=19, GT=20, LT=21, GTE=22, LTE=23, EQ=24, NEQ=25, PP=26, MM=27, 
		INT=28, STRING=29, BOOL=30, TABLE=31, PAGE=32, TRUE=33, FALSE=34, PRINT=35, 
		FUNC=36, END=37, RETURN=38, IF=39, ELSE=40, WHILE=41, FOR=42, BRK=43, 
		MAIN=44, IMPORT=45, ID=46, NUM=47, COMMENT=48, LCOM=49, STRLIT=50, NL=51, 
		WS=52;
	public static final int
		RULE_prog = 0, RULE_import_seq = 1, RULE_import_stmt = 2, RULE_prog_seq = 3, 
		RULE_seq = 4, RULE_main_func = 5, RULE_stmt_seq = 6, RULE_func_seq = 7, 
		RULE_stmt = 8, RULE_comm = 9, RULE_ident = 10, RULE_for_stmt = 11, RULE_while_stmt = 12, 
		RULE_if_stmt = 13, RULE_else_stmt = 14, RULE_func_action = 15, RULE_expr = 16, 
		RULE_array_expr = 17, RULE_static_fcall = 18, RULE_func = 19, RULE_func_stmt = 20, 
		RULE_params = 21, RULE_args = 22, RULE_ret_stmt = 23, RULE_bool_expr = 24, 
		RULE_bool_term = 25, RULE_bool_fact = 26, RULE_cond = 27, RULE_str_expr = 28, 
		RULE_int_expr = 29, RULE_term = 30, RULE_fact = 31, RULE_type = 32;
	public static final String[] ruleNames = {
		"prog", "import_seq", "import_stmt", "prog_seq", "seq", "main_func", "stmt_seq", 
		"func_seq", "stmt", "comm", "ident", "for_stmt", "while_stmt", "if_stmt", 
		"else_stmt", "func_action", "expr", "array_expr", "static_fcall", "func", 
		"func_stmt", "params", "args", "ret_stmt", "bool_expr", "bool_term", "bool_fact", 
		"cond", "str_expr", "int_expr", "term", "fact", "type"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'.'", "'()'", "'('", "')'", "'='", "'['", "']'", "';'", "'{'", 
		"','", "'}'", "'||'", "'&&'", "'!'", "'*'", "'+'", "'/'", "'-'", "'%'", 
		"'>'", "'<'", "'>='", "'<='", "'=='", "'!='", "'++'", "'--'", "'num'", 
		"'string'", "'bool'", "'table'", "'page'", "'true'", "'false'", "'print'", 
		"'func'", "'end'", "'return'", "'if'", "'else'", "'while'", "'for'", "'break'", 
		"'main'", "'import'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, "MUL", "ADD", "DIV", "SUB", "MOD", "GT", "LT", "GTE", 
		"LTE", "EQ", "NEQ", "PP", "MM", "INT", "STRING", "BOOL", "TABLE", "PAGE", 
		"TRUE", "FALSE", "PRINT", "FUNC", "END", "RETURN", "IF", "ELSE", "WHILE", 
		"FOR", "BRK", "MAIN", "IMPORT", "ID", "NUM", "COMMENT", "LCOM", "STRLIT", 
		"NL", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Wiki.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }



	public WikiParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public Import_seqContext import_seq() {
			return getRuleContext(Import_seqContext.class,0);
		}
		public Prog_seqContext prog_seq() {
			return getRuleContext(Prog_seqContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WikiListener ) ((WikiListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WikiListener ) ((WikiListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			import_seq();
			setState(67);
			prog_seq();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Import_seqContext extends ParserRuleContext {
		public Import_stmtContext import_stmt() {
			return getRuleContext(Import_stmtContext.class,0);
		}
		public TerminalNode NL() { return getToken(WikiParser.NL, 0); }
		public Import_seqContext import_seq() {
			return getRuleContext(Import_seqContext.class,0);
		}
		public Import_seqContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_import_seq; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WikiListener ) ((WikiListener)listener).enterImport_seq(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WikiListener ) ((WikiListener)listener).exitImport_seq(this);
		}
	}

	public final Import_seqContext import_seq() throws RecognitionException {
		Import_seqContext _localctx = new Import_seqContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_import_seq);
		try {
			setState(74);
			switch (_input.LA(1)) {
			case IMPORT:
				enterOuterAlt(_localctx, 1);
				{
				setState(69);
				import_stmt();
				setState(70);
				match(NL);
				setState(71);
				import_seq();
				}
				break;
			case EOF:
			case PP:
			case MM:
			case INT:
			case STRING:
			case BOOL:
			case TABLE:
			case PAGE:
			case PRINT:
			case FUNC:
			case RETURN:
			case IF:
			case WHILE:
			case FOR:
			case BRK:
			case MAIN:
			case ID:
			case COMMENT:
			case LCOM:
			case NL:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Import_stmtContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(WikiParser.IMPORT, 0); }
		public List<TerminalNode> ID() { return getTokens(WikiParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(WikiParser.ID, i);
		}
		public Import_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_import_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WikiListener ) ((WikiListener)listener).enterImport_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WikiListener ) ((WikiListener)listener).exitImport_stmt(this);
		}
	}

	public final Import_stmtContext import_stmt() throws RecognitionException {
		Import_stmtContext _localctx = new Import_stmtContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_import_stmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(IMPORT);
			setState(77);
			match(ID);
			setState(82);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(78);
				match(T__0);
				setState(79);
				match(ID);
				}
				}
				setState(84);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Prog_seqContext extends ParserRuleContext {
		public SeqContext seq() {
			return getRuleContext(SeqContext.class,0);
		}
		public Prog_seqContext prog_seq() {
			return getRuleContext(Prog_seqContext.class,0);
		}
		public Prog_seqContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog_seq; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WikiListener ) ((WikiListener)listener).enterProg_seq(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WikiListener ) ((WikiListener)listener).exitProg_seq(this);
		}
	}

	public final Prog_seqContext prog_seq() throws RecognitionException {
		Prog_seqContext _localctx = new Prog_seqContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_prog_seq);
		try {
			setState(89);
			switch (_input.LA(1)) {
			case PP:
			case MM:
			case INT:
			case STRING:
			case BOOL:
			case TABLE:
			case PAGE:
			case PRINT:
			case FUNC:
			case RETURN:
			case IF:
			case WHILE:
			case FOR:
			case BRK:
			case MAIN:
			case ID:
			case COMMENT:
			case LCOM:
			case NL:
				enterOuterAlt(_localctx, 1);
				{
				setState(85);
				seq();
				setState(86);
				prog_seq();
				}
				break;
			case EOF:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SeqContext extends ParserRuleContext {
		public Func_seqContext func_seq() {
			return getRuleContext(Func_seqContext.class,0);
		}
		public Main_funcContext main_func() {
			return getRuleContext(Main_funcContext.class,0);
		}
		public Stmt_seqContext stmt_seq() {
			return getRuleContext(Stmt_seqContext.class,0);
		}
		public TerminalNode NL() { return getToken(WikiParser.NL, 0); }
		public SeqContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_seq; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WikiListener ) ((WikiListener)listener).enterSeq(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WikiListener ) ((WikiListener)listener).exitSeq(this);
		}
	}

	public final SeqContext seq() throws RecognitionException {
		SeqContext _localctx = new SeqContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_seq);
		try {
			setState(95);
			switch (_input.LA(1)) {
			case FUNC:
				enterOuterAlt(_localctx, 1);
				{
				setState(91);
				func_seq();
				}
				break;
			case MAIN:
				enterOuterAlt(_localctx, 2);
				{
				setState(92);
				main_func();
				}
				break;
			case PP:
			case MM:
			case INT:
			case STRING:
			case BOOL:
			case TABLE:
			case PAGE:
			case PRINT:
			case RETURN:
			case IF:
			case WHILE:
			case FOR:
			case BRK:
			case ID:
			case COMMENT:
			case LCOM:
				enterOuterAlt(_localctx, 3);
				{
				setState(93);
				stmt_seq();
				}
				break;
			case NL:
				enterOuterAlt(_localctx, 4);
				{
				setState(94);
				match(NL);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Main_funcContext extends ParserRuleContext {
		public TerminalNode MAIN() { return getToken(WikiParser.MAIN, 0); }
		public TerminalNode NL() { return getToken(WikiParser.NL, 0); }
		public TerminalNode END() { return getToken(WikiParser.END, 0); }
		public Stmt_seqContext stmt_seq() {
			return getRuleContext(Stmt_seqContext.class,0);
		}
		public Main_funcContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main_func; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WikiListener ) ((WikiListener)listener).enterMain_func(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WikiListener ) ((WikiListener)listener).exitMain_func(this);
		}
	}

	public final Main_funcContext main_func() throws RecognitionException {
		Main_funcContext _localctx = new Main_funcContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_main_func);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(MAIN);
			setState(98);
			match(T__1);
			setState(99);
			match(NL);
			setState(102);
			switch (_input.LA(1)) {
			case PP:
			case MM:
			case INT:
			case STRING:
			case BOOL:
			case TABLE:
			case PAGE:
			case PRINT:
			case RETURN:
			case IF:
			case WHILE:
			case FOR:
			case BRK:
			case ID:
			case COMMENT:
			case LCOM:
				{
				setState(100);
				stmt_seq();
				}
				break;
			case END:
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(104);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Stmt_seqContext extends ParserRuleContext {
		public StmtContext stmt() {
			return getRuleContext(StmtContext.class,0);
		}
		public TerminalNode NL() { return getToken(WikiParser.NL, 0); }
		public Stmt_seqContext stmt_seq() {
			return getRuleContext(Stmt_seqContext.class,0);
		}
		public Stmt_seqContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt_seq; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WikiListener ) ((WikiListener)listener).enterStmt_seq(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WikiListener ) ((WikiListener)listener).exitStmt_seq(this);
		}
	}

	public final Stmt_seqContext stmt_seq() throws RecognitionException {
		Stmt_seqContext _localctx = new Stmt_seqContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_stmt_seq);
		try {
			setState(115);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(106);
				stmt();
				setState(107);
				match(NL);
				setState(108);
				stmt_seq();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(110);
				stmt();
				setState(113);
				switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
				case 1:
					{
					setState(111);
					match(NL);
					}
					break;
				case 2:
					{
					}
					break;
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Func_seqContext extends ParserRuleContext {
		public FuncContext func() {
			return getRuleContext(FuncContext.class,0);
		}
		public TerminalNode NL() { return getToken(WikiParser.NL, 0); }
		public Func_seqContext func_seq() {
			return getRuleContext(Func_seqContext.class,0);
		}
		public Func_seqContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func_seq; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WikiListener ) ((WikiListener)listener).enterFunc_seq(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WikiListener ) ((WikiListener)listener).exitFunc_seq(this);
		}
	}

	public final Func_seqContext func_seq() throws RecognitionException {
		Func_seqContext _localctx = new Func_seqContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_func_seq);
		try {
			setState(122);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(117);
				func();
				setState(118);
				match(NL);
				setState(119);
				func_seq();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(121);
				func();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtContext extends ParserRuleContext {
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
	 
		public StmtContext() { }
		public void copyFrom(StmtContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class CommentContext extends StmtContext {
		public CommContext comm() {
			return getRuleContext(CommContext.class,0);
		}
		public CommentContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WikiListener ) ((WikiListener)listener).enterComment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WikiListener ) ((WikiListener)listener).exitComment(this);
		}
	}
	public static class BreakContext extends StmtContext {
		public TerminalNode BRK() { return getToken(WikiParser.BRK, 0); }
		public BreakContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WikiListener ) ((WikiListener)listener).enterBreak(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WikiListener ) ((WikiListener)listener).exitBreak(this);
		}
	}
	public static class IncDecContext extends StmtContext {
		public Token u;
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public TerminalNode PP() { return getToken(WikiParser.PP, 0); }
		public TerminalNode MM() { return getToken(WikiParser.MM, 0); }
		public IncDecContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WikiListener ) ((WikiListener)listener).enterIncDec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WikiListener ) ((WikiListener)listener).exitIncDec(this);
		}
	}
	public static class DeclareContext extends StmtContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public DeclareContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WikiListener ) ((WikiListener)listener).enterDeclare(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WikiListener ) ((WikiListener)listener).exitDeclare(this);
		}
	}
	public static class PrintContext extends StmtContext {
		public TerminalNode PRINT() { return getToken(WikiParser.PRINT, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public PrintContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WikiListener ) ((WikiListener)listener).enterPrint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WikiListener ) ((WikiListener)listener).exitPrint(this);
		}
	}
	public static class DecAssignContext extends StmtContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public DecAssignContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WikiListener ) ((WikiListener)listener).enterDecAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WikiListener ) ((WikiListener)listener).exitDecAssign(this);
		}
	}
	public static class IfStmtContext extends StmtContext {
		public If_stmtContext if_stmt() {
			return getRuleContext(If_stmtContext.class,0);
		}
		public IfStmtContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WikiListener ) ((WikiListener)listener).enterIfStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WikiListener ) ((WikiListener)listener).exitIfStmt(this);
		}
	}
	public static class WhileStmtContext extends StmtContext {
		public While_stmtContext while_stmt() {
			return getRuleContext(While_stmtContext.class,0);
		}
		public WhileStmtContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WikiListener ) ((WikiListener)listener).enterWhileStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WikiListener ) ((WikiListener)listener).exitWhileStmt(this);
		}
	}
	public static class FuncActContext extends StmtContext {
		public Func_actionContext func_action() {
			return getRuleContext(Func_actionContext.class,0);
		}
		public FuncActContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WikiListener ) ((WikiListener)listener).enterFuncAct(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WikiListener ) ((WikiListener)listener).exitFuncAct(this);
		}
	}
	public static class AssignContext extends StmtContext {
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AssignContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WikiListener ) ((WikiListener)listener).enterAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WikiListener ) ((WikiListener)listener).exitAssign(this);
		}
	}
	public static class StaticCallContext extends StmtContext {
		public Static_fcallContext static_fcall() {
			return getRuleContext(Static_fcallContext.class,0);
		}
		public StaticCallContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WikiListener ) ((WikiListener)listener).enterStaticCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WikiListener ) ((WikiListener)listener).exitStaticCall(this);
		}
	}
	public static class ForStmtContext extends StmtContext {
		public For_stmtContext for_stmt() {
			return getRuleContext(For_stmtContext.class,0);
		}
		public ForStmtContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WikiListener ) ((WikiListener)listener).enterForStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WikiListener ) ((WikiListener)listener).exitForStmt(this);
		}
	}
	public static class ReturnStmtContext extends StmtContext {
		public Ret_stmtContext ret_stmt() {
			return getRuleContext(Ret_stmtContext.class,0);
		}
		public ReturnStmtContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WikiListener ) ((WikiListener)listener).enterReturnStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WikiListener ) ((WikiListener)listener).exitReturnStmt(this);
		}
	}
